Mobile Overflow fix

--- a/src/assets/HomePage.css
+++ b/src/assets/HomePage.css
@@ -112,6 +112,10 @@ html, body, #app {
     width: 100%;
     height: 100%;
   }
+  html, body, #app {
+    overflow: visible;
+    height: auto; 
+  }
 }
 
 .toolbox {
